<resources>
    <string name="app_name">송파푸드마켓</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>
    <string name="menu_home">송파푸드마켓</string>
    <string name="menu_notice">공지사항</string>
    <string name="menu_information">이용안내</string>
    <string name="menu_share">나눔이야기</string>
    <string name="menu_howCome">오시는 길</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <!-- TODO: Remove or change this placeholder text -->
<!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>